--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <div id="all" class="">
 	<div class="container">
-		<div class="left col-md-4">
+		<div class="left col-sm-4">
 			<h2> Add your task</h2>
 			<div class="form-group">
 				<label for="title"> Title: </label>
@@ -32,7 +32,7 @@
 				<td><button class="btn btn-primary add-task">Add </button></td>	
 			</div>	<!-- form -group -->
 		</div>	<!--- left col-6 -->
-		<div class="col-md-8 view-collection">
+		<div class="col-sm-8 view-collection">
 
 		</div>
 	</div><!--- container -->
